--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
-    <string name="app_name">DiscussionForum</string>
+    <string name="app_name">Discussion\nForum</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login_activty">LoginActivty</string>
+    <string name="title_activity_authenticate">AuthenticateActivity</string>
+    <string name="title_activity_browse_questions">BrowseQuestionsActivity</string>
+    <string name="title_activity_on_click_question">OnClickQuestionActivity</string>
 </resources>
