--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login_activty">LoginActivty</string>
+    <string name="title_activity_login_activty">Discussion\nForum</string>
     <string name="title_activity_authenticate">AuthenticateActivity</string>
     <string name="title_activity_browse_questions">BrowseQuestionsActivity</string>
     <string name="title_activity_on_click_question">OnClickQuestionActivity</string>
